# spreadsheet

./: .autoenv  .gitignore  README.md  pyproject.toml  setup.cfg
.virtual_documents/jupyter/: hello.ipynb  spreadsheet.ipynb  text.ipynb
data/: README.md  fruits.csv  fruits.txt
jupyter/: hello.ipynb  spreadsheet.ipynb  text.ipynb
spreadsheet/: __main__.py
tests/: test_spreadsheet.py
